--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 limit.period=1
 limit.total=1
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HSQLDialect
